# CentralityFramework

./: CMakeLists.txt  EventLinkDef.h  GetCentralityTest.C  RunCentralityFramework.C  TreeInterface.C  main.C
Glauber/: GlauberFitter.cxx  GlauberFitter.h  GlauberParGetter.cxx  GlauberParGetter.h  RunGlauberFitter.C  TreeReader.C  run.sh  run_glauber.sh  test.C  test1.C  testLambdaFunc.C
InputTree/: CentralityContainerQA.C  DataTreeBPD.cxx  DataTreeBPD.h  DataTreeConstants.h  DataTreeConverterNA61.cxx  DataTreeConverterNA61.h  DataTreeEvent.cxx  DataTreeEvent.h  DataTreeMCTrack.cxx  DataTreeMCTrack.h  DataTreeMaker.cxx  DataTreeMaker.h  DataTreePSDHit.h  DataTreePSDModule.cxx  DataTreePSDModule.h  DataTreePSDModuleHit.h  DataTreePSDSection.cxx  DataTreePSDSection.h  DataTreePSDSectionHit.h  DataTreeSTSTrack.cxx  DataTreeSTSTrack.h  DataTreeTOFHit.cxx  DataTreeTOFHit.h  DataTreeTOFSegment.cxx  DataTreeTOFSegment.h  DataTreeTrack.cxx  DataTreeTrack.h  DataTreeTrigger.cxx  DataTreeTrigger.h  DataTreeV0Candidate.cxx  DataTreeV0Candidate.h
Macro/: CentralityContainerQA.C  DrawProfile.C  RunCentralityFramework.C  RunGetter.C  RunTreeInterface.C  SlicesQA.C  TestGetter.C  TreeInterface.C  run.sh  runCentralityConrainer.sh  run_local.sh
batch/: run.sh  runCentralityConrainer.sh
config/: ContConfig.C
include/: CentralityContainerNormalizer.h  CentralityDetectorEvent.h  CentralityEventContainer.h  CentralityGetter.h  CentralityManager.h  CentralitySlice.h  CentralitySlicesFinder.h  NA61DataEvent.h  NA61DataEventNew.h  TreeInterface.h
src/: CentralityContainerNormalizer.cxx  CentralityDetectorEvent.cxx  CentralityEventContainer.cxx  CentralityGetter.cxx  CentralityManager.cxx  CentralitySlice.cxx  CentralitySlicesFinder.cxx  NA61DataEvent.cxx  NA61DataEventNew.cxx  TreeInterface.cxx
